newest video added

--- a/watch.html
+++ b/watch.html
@@ -91,7 +91,7 @@
                                 <a class="nav-link " href="contact.html">Contact Us</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="give.html">Give</a>
+                                <a class="nav-link disabled" href="give.html">Give</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link active" href="watch.html">Watch</a>
@@ -115,9 +115,9 @@
                 <div class="col">
                     <div class="alert alert-danger alert-info">
                         <!-- <button type="button" class="close" data-dismiss="alert">&times;</button> -->
-                        <!-- <strong>Due to COVID-19 and the recommendation of the CDC with regards to Social Distancing, and the state
-              of Florida, we will be meeting completely online. -->
-                        <strong>Join us this Sunday at 10AM, on our Facebook Live page for our live stream.</strong> <br><br>
+                        <strong>Due to COVID-19 and the recommendation of the CDC with regards to Social Distancing, and the state
+              of Florida, we will be meeting completely online.
+              Join us this Sunday at 10AM, on our Facebook Live page for our live stream.</strong> <br><br>
                         <a href="https://www.facebook.com/pcmtolivebaptist"> <button id="joinFB">Join Our Sunday Live Stream Via
                 Facebook</button></a>
                     </div>
@@ -125,9 +125,30 @@
             </div>
             <div class="row">
                 <div class="col-md-8">
-                    <!-- don't forget command + shift + L to select all numbers at once  -->
-                    <video src="https://www.facebook.com/PCmtolivebaptist/videos/l/">
-                       Sorry, your browser does not support this video player.
+                    <video src="https://www.facebook.com/PCmtolivebaptist/videos/227279509833139/">
+
+            Sorry, your browser does not support this video player.
+          </video>
+                    <div class="fb-video" data-href="https://www.facebook.com/PCmtolivebaptist/videos/227279509833139/" data-width="300" data-show-text="false">
+                        <blockquote cite="https://developers.facebook.com/PCmtolivebaptist/videos/227279509833139/" class="fb-xfbml-parse-ignore">
+                            <a href="https://developers.facebook.com/PCmtolivebaptist/videos/227279509833139/"></a>
+                            <p></p>
+                            <!-- Posted by <a href="https://www.facebook.com/PCmtolivebaptist/">Mt. Olive Baptist Church</a> on Sunday, March 22, 2020</blockquote></div> -->
+                    </div>
+
+                </div>
+                <div class="col-md-4">
+                    <h4>Latest Video</h4>
+                    <h5>"God Is Not Through With You Yet"</h5>
+                    <p>Dated 3/19/23</p>
+                </div>
+            </div>
+            <br>
+            <div class="row">
+                <div class="col-md-8">
+                    <video src="https://www.facebook.com/PCmtolivebaptist/videos/1256124938648458/">
+
+            Sorry, your browser does not support this video player.
           </video>
                     <div class="fb-video" data-href="https://www.facebook.com/PCmtolivebaptist/videos/1256124938648458/" data-width="300" data-show-text="false">
                         <blockquote cite="https://developers.facebook.com/PCmtolivebaptist/videos/1256124938648458/" class="fb-xfbml-parse-ignore">
@@ -138,33 +159,11 @@
 
                 </div>
                 <div class="col-md-4">
-                    <h4>Latest Video</h4>
-                    <h5>"God Has Shown Us An Abundance Of"</h5>
-                    <p>Dated 3/5/23</p>
-                </div>
-            </div>
-            <br>
-            <div class="row">
-                <div class="col-md-8">
-                    <!-- don't forget command + shift + L to select all numbers at once  -->
-                    <video src="https://www.facebook.com/PCmtolivebaptist/videos/882396213095489/">
-                       Sorry, your browser does not support this video player.
-          </video>
-                    <div class="fb-video" data-href="https://www.facebook.com/PCmtolivebaptist/videos/882396213095489/" data-width="300" data-show-text="false">
-                        <blockquote cite="https://developers.facebook.com/PCmtolivebaptist/videos/882396213095489/" class="fb-xfbml-parse-ignore">
-                            <a href="https://developers.facebook.com/PCmtolivebaptist/videos/882396213095489/"></a>
-                            <p></p>
-                            <!-- Posted by <a href="https://www.facebook.com/PCmtolivebaptist/">Mt. Olive Baptist Church</a> on Sunday, March 22, 2020</blockquote></div> -->
-                    </div>
-
-                </div>
-                <div class="col-md-4">
                     <h4></h4>
-                    <h5>"Let Us Go Back To Church: It's A Family Affair"</h5>
-                    <p>Dated 2/13/23</p>
+                    <h5>"God Has Shown Us An Abundance Of Mercy"</h5>
+                    <p>Dated 3/05/23</p>
                 </div>
             </div>
-            <br>
 
 
 
@@ -267,7 +266,7 @@
                                     <ul class="nav menu" id="menu-footer-right">
                                         <li><a class="nav-link menu-link" style="font-size:15px;color:white" href="about.html">About</a>
                                         </li>
-                                        <li><a class="nav-link menu-link" style="font-size:15px;color:white" href="give.html">Give</a>
+                                        <li><a class="nav-link menu-link disabled" style="font-size:15px;color:white" href="give.html">Give</a>
                                         </li>
                                         <li><a class="nav-link menu-link" style="font-size:15px;color:white" href="serve.html">Serve</a>
                                         </li>
